# hz-edg

./: .gitignore  README.md
.github/workflows/: deploy-edgmvp-railway.yml
EDGMVP/: .gitignore  README.md  docker-compose.yml  railway.frontend.toml  railway.toml  schema.sql
EDGMVP/backend/: .env.example  Cargo.toml
EDGMVP/backend/src/: config.rs  errors.rs  main.rs  models.rs  state.rs
EDGMVP/backend/src/routes/: generate.rs  health.rs  mod.rs
EDGMVP/backend/src/services/: openai.rs
EDGMVP/backend/src/utils/: docx.rs
EDGMVP/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
EDGMVP/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
EDGMVP/frontend/src/: App.tsx  styles.css
ML/School/: main.py  transaction.csv
ML/work/interview questions/: anagram.py  integersum.py  macaddresses.py  requierments.txt
Websites/haccp-helper/: README.md  startup.sh
Websites/imagehandler/: package-lock.json  package.json
hz-pagescf-app/: package-lock.json  package.json
hz-pagescf-app/src/: App.tsx  index.css
hz-pagescf-app/src/context/: AuthContext.tsx
hz-pagescf-app/src/routes/: index.tsx
hz-pagescf-app/src/services/: API_MIGRATION.md  AuditService.ts  BatchService.ts  EmployeeService.ts  IngredientService.ts  OrganizationService.ts  ProblemLogService.ts  README.md  ReceivingLogService.ts  RecipeService.ts  ReportService.ts  SUMMARY.md  ServiceTemplate.ts  StorageService.ts  TaskService.ts  api.ts  index.ts
pyenv/HazardZero/: pyvenv.cfg
supabase/supabase-react/: .gitignore  index.html  package-lock.json  package.json
(+60 files in other folders)
