[package]
name = "sqf-docs-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
async-openai = "0.27"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
rdocx = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
